# ComfyUI-RPG-Characters

./: .gitignore  LICENSE  README.md  __init__.py  model_likeness_switch.py  prompt_conditioning_converter_node.py  prompt_selector_node.py  pyproject.toml  rpg_art_style_node.py  rpg_characters_node.py  rpg_prompt_concatenator_node.py
.github/workflows/: publish.yml
Examples/: RPG_Nodes_Normal.json  RPG_Nodes_Normal_Vs_Ollama.json  RPG_Nodes_Normal_and_Ollama_With_Switch.json  RPG_Nodes_Ollama.json
rpg_character_data/: __init__.py  rpg_age_data.py  rpg_augment_data.py  rpg_beard_colour_data.py  rpg_beard_style_data.py  rpg_class_data.py  rpg_clothes_style_data.py  rpg_emotion_data.py  rpg_ethnicity_data.py  rpg_gender_data.py  rpg_hair_colour_data.py  rpg_hair_style_data.py  rpg_race_data.py  rpg_scene_data.py
